--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
+    "start:prod": "npm run build && npm start",
     "dev":
-      "set process.env.NODE_ENV=development && webpack-dev-server --open --config=webpack.config.dev.js",
+      "set process.env.NODE_ENV=development && webpack-dev-server --open --color --config=webpack.config.dev.js",
     "build":
-      "set process.env.NODE_ENV=production && webpack --config=webpack.config.prod.js"
+      "set process.env.NODE_ENV=production && webpack --config=webpack.config.prod.js --color"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^4.13.7",
     "morgan": "^1.9.0",
+    "offline-plugin": "^4.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.4.0",
@@ -40,13 +42,19 @@
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "eslint-config-airbnb": "^16.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
     "nodemon": "^1.14.3",
+    "postcss-loader": "^2.0.9",
     "prop-types": "^15.6.0",
+    "react-hot-loader": "^3.1.3",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.9.1",
     "webpack-dev-server": "^2.9.7",
     "webpack-hot-middleware": "^2.21.0"
   }
