--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
   "presets": ["env", "react"],
-  "plugins": [["transform-object-rest-spread", { "useBuiltIns": true }]]
+  "plugins": [
+    ["transform-object-rest-spread", { "useBuiltIns": true }],
+    "react-hot-loader/babel"
+  ]
 }
