--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "npm run build && npm start",
-    "dev":
-      "set process.env.NODE_ENV=development && webpack-dev-server --open --color --config=webpack.config.dev.js",
-    "build":
-      "set process.env.NODE_ENV=production && webpack --config=webpack.config.prod.js --color"
+    "dev": "set process.env.NODE_ENV=development && webpack-dev-server --open --color --config=webpack.config.dev.js",
+    "build": "set process.env.NODE_ENV=production && webpack --config=webpack.config.prod.js --color"
   },
   "keywords": [],
   "author": "",
@@ -46,6 +44,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.4.2",
     "node-sass": "^4.7.2",
     "nodemon": "^1.14.3",
     "postcss-loader": "^2.0.9",
@@ -53,6 +52,7 @@
     "react-hot-loader": "^3.1.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.9.1",
     "webpack-dev-server": "^2.9.7",
