--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "npm run build && npm start",
-    "dev": "set process.env.NODE_ENV=development && webpack-dev-server --open --color --config=webpack.config.dev.js",
-    "build": "set process.env.NODE_ENV=production && webpack --config=webpack.config.prod.js --color"
+    "dev":
+      "set process.env.NODE_ENV=development && webpack-dev-server --open --color --config=webpack.config.dev.js",
+    "build":
+      "set process.env.NODE_ENV=production && webpack --config=webpack.config.prod.js --color"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +19,6 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "express-graphql": "^0.6.11",
     "express-session": "^1.15.6",
     "mongoose": "^4.13.7",
     "morgan": "^1.9.0",
